[package]
name = "validator-crate"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-http = "3.9.0"
actix-web = "4.9.0"
regex = "1.11.1"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.4.0", features = ["full"] }
validator = { version = "0.18.1", features = ["derive"] }
